Fixes overflow problem

--- a/src/app/components/ratings/ratings.component.scss
+++ b/src/app/components/ratings/ratings.component.scss
@@ -8,6 +8,4 @@
 .rating-wrap {
   width: 100%;
   height: 100%;
-  overflow-y: auto;
-  touch-action: pan-y !important;
 }
